# h1_usage

./: README.md
src/h1/: h1_install.sh
src/h1/h1_bringup/: CMakeLists.txt  package.xml
src/h1/h1_bringup/config/: 10-qre-h1-motd  def_cyclone.xml  reboot.bash  setup.bash
src/h1/h1_bringup/debian/: 45-mbs.rules
src/h1/h1_bringup/hooks/: auto.bash
src/h1/h1_bringup/scripts/: startup_installer.py
src/h1/h1_control/: CMakeLists.txt  package.xml
src/h1/h1_control/config/: localization.yaml  teleop.yaml
src/h1/h1_control/launch/: control.launch.py  ekf_localization.launch.py  odom_fastlio.launch.py  odom_rf2o.launch.py  teleop.launch.py  twistmux.launch.py
src/h1/h1_depth_camera/: CMakeLists.txt  package.xml
src/h1/h1_depth_camera/config/: params_zed_stereo.yaml  realsense_i.yaml
src/h1/h1_depth_camera/launch/: realsense.launch.py  zed.launch.py
src/h1/h1_description/: CMakeLists.txt  package.xml
src/h1/h1_description/config/: h1_2_ros2_controller_gazebo.yaml
src/h1/h1_description/launch/: h1_2_description.launch.py  h1_description.launch.py  view_robot.launch.py
src/h1/h1_description/meshes/h1_2/: l_foot_cleaned.stl
src/h1/h1_description/meshes/sensors/: os1_64.dae  reachm2_antenna.dae  reachm2_antenna.stl  zed_bracket.dae
src/h1/h1_description/meshes/sensors/zed2/: zed2i.stl
src/h1/h1_description/urdf/: h1.urdf  h1_2.urdf
src/h1/h1_description/xacro/: accessories.xacro  h1.xacro  h1_2.xacro
src/h1/h1_description/xacro/dex/: dex3_1_l.urdf  dex3_1_r.urdf
src/h1/h1_description/xacro/h1/: h1.urdf  h1_arm.ros2_control.xacro
src/h1/h1_description/xacro/h1_2/: h1_2.urdf  h1_2_arm.ros2_control.xacro  h1_2_gazebo_control.xacro
src/h1/h1_description/xacro/sensors/: d435i.xacro  emlid_m2.xacro  ouster.xacro  zed2i.xacro  zed_bracket.xacro  zed_macro.xacro
src/h1/h1_gazebo/: CMakeLists.txt  README.md  package.xml
src/h1/h1_gazebo/config/: ros_gz.yaml
src/h1/h1_gazebo/h1_gazebo/: example.py
src/h1/h1_gazebo/launch/: h1_2_fortress_simulation.launch.py
src/h1/h1_gazebo/worlds/: fortress-plane.sdf
src/h1/h1_gps/: CMakeLists.txt  package.xml
src/h1/h1_gps/config/: emlid_m2.yaml
src/h1/h1_gps/launch/: emlid_m2.launch.py
src/h1/h1_interface/: CMakeLists.txt  package.xml
src/h1/h1_interface/srv/: H1Modes.srv
src/h1/h1_joystick/: CMakeLists.txt  package.xml
src/h1/h1_joystick/config/: logitechf710.yaml
src/h1/h1_joystick/h1_joystick/: libjoypy.py
src/h1/h1_joystick/launch/: logitech_f710.launch.py
src/h1/h1_joystick/scripts/: logitech_f710
src/h1/h1_lidar/: CMakeLists.txt  package.xml
src/h1/h1_lidar/config/: fast_lio.yaml  kiss_icp.yaml  livox_mid360.json  ouster_params.yaml  ouster_static_ip.py
src/h1/h1_lidar/launch/: 2d_scanner.launch.py  kiss_lio.launch.py  livox_mid360.launch.py  mola_lio.launch.py  ouster.launch.py
src/h1/h1_navigation/: CMakeLists.txt  README.md  package.xml
src/h1/h1_navigation/behavior_trees/: nav_to_pose.xml
src/h1/h1_navigation/launch/: map_navi.launch.py  odom_navi.launch.py  slam.launch.py
src/h1/h1_navigation/launch/include/: localization.launch.py  navigation.launch.py
src/h1/h1_navigation/maps/: custom_map.pgm  custom_map.yaml
src/h1/h1_navigation/param/: nav2_localization.yaml  nav2_map.yaml  nav2_odom.yaml  nav2_slam.yaml
src/h1/h1_platform/: CMakeLists.txt  README.md  h1_platform.xml  package.xml
src/h1/h1_platform/config/: h1_2_dual_arm.yaml  h1_7dof_arm.yaml  h1_controller.yaml  h1_domain_bridge.yaml  h1_platform.yaml
src/h1/h1_platform/h1_platform/: h1_2_statepublisher
src/h1/h1_platform/h1_platform/utils/: tf_cloud.py  transforms.py
src/h1/h1_platform/include/h1_arm_control_hardware/: h1_2_arm_hw.hpp  visibility_control.h
src/h1/h1_platform/include/qre/: g1_platform.h
src/h1/h1_platform/launch/: arm_7dof_ros2controller.launch.py  domain_bridge.launch.py  h1_2_arm_record.launch.py  h1_2_arm_server.launch.py  h1_2_state_publisher.launch.py  h1_state_publisher.launch.py  highlevel_ros.launch.py  videostream.launch.py
src/h1/h1_platform/src/: h1_2_arm_record.cpp  h1_2_arm_server.cpp  h1_highroscontrol.cpp  h1_video_stream.cpp
src/h1/h1_platform/src/arm_hardware/: h1_2_arm_hw.cpp
src/h1/h1_viz/: CMakeLists.txt  package.xml
src/h1/h1_viz/launch/: view_robot.launch.py
src/h1/h1_viz/rviz/: gazebo.rviz  model.rviz  robot.rviz
src/h1/h1_webserver/: CMakeLists.txt  README.md  package.xml  webserver_installer.sh
src/h1/h1_webserver/config/: robot_webserver.yaml
src/h1/h1_webserver/h1_webserver/: ignore_compile.py  ignore_python_binartor.bash  libaudiogen.py  libgpsconverter.py  libllm.py  libroscustom.py  librosnode.py  libwebserver.py
src/h1/h1_webserver/h1_webserver/static/: styles.css
src/h1/h1_webserver/h1_webserver/static/common/: navbar.html  popup.html
src/h1/h1_webserver/h1_webserver/static/scripts/: common_script.js  connection_status_script.js  console_script.js  joystick_custom_script.js  navi_indoor_script.js  navi_outdoor_script.js  robot_status_script.js  slider_script.js  system_script.js  video_stream_script.js  vnc_script.js
src/h1/h1_webserver/h1_webserver/static/webaudio/: audio_generator
src/h1/h1_webserver/h1_webserver/templates/: console.html  index.html  login.html  navi_indoor.html  navi_outdoor.html  safety.html  vnc.html
src/h1/h1_webserver/launch/: webserver.launch.py
src/h1/h1_webserver/navi_outdoor_nogozones/: gps_coordinates.json
src/h1/h1_webserver/navi_outdoor_waypoints/: gps_coordinates.json
src/h1/h1_webserver/scripts/: add_host_name  webserver
