<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h1_navigation</name>
  <version>1.0.0</version>
  <description>
  The h1_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>